# CarePet-AI-Elderly-Health-App-good

./: .env.example  .gitignore  README.md  add_points.py  apply_constraints.py  buildozer.spec  check_collection.py  check_db.py  check_flet.py  check_flet_v4.py  check_version.py  empty_bowl.py  fix_db.py  img_sig.txt  inspect_flet.py  inspect_flet_v2.py  inspect_flet_v3.py  inspect_page_full.py  main.py  migrate_pg_to_sqlite.py  migrate_users_only.py  populate_collection.py  pyproject.toml  requirements.txt  run_graduation_migration.py  run_med_points_migration.py  run_migration.py  run_unlock_level_migration.py  seed_gallery.py  setup_buildozer.sh  test_async.py  test_async_handler.py  test_async_v2.py  test_fail.txt  test_flet.py  test_fp_overlay.py  test_log.txt  test_minimal_flet.py  test_navigation.py  test_out.txt  (+3 more)
app/: container.py  debug_main.py  main.py  routes.py
data/: auth_state.json  database.py  migrate_schema.py  postgres_schema.sql  schema.sql
data/migrations/: add_med_points_column.sql  (+5 more)
docs/: ENGINEERING_BLUEPRINT.md
domain/: __init__.py  level_engine.py  models.py  pet_engine.py  point_engine.py  reminder_engine.py  reminder_state_machine.py  shop_engine.py  utils.py  vision_engine.py  watcher.py
scripts/: create_user.py  diagnose_db.py  fix_postgres_schema.py  force_update_name.py  migrate_notifications.py  regen_today_events.py  run_migration.py  set_mood.py  update_user_name_to_lee.py  verify_async_mongo.py  verify_pet_sync.py
services/: __init__.py  caregiver_service.py  haptics_service.py  notification_service.py  undo_manager.py
(+38 files in other folders)
